[project]
name = "tiara"
version = "1.0.4rc3"
authors = [
  { name="Micha?? Karlicki" }, { name="Stanis??aw Antonowicz", email="stas.antonowicz@gmail.com" }
]
maintainers = [{name = "Josh L. Espinoza", email = "jolespin@newatlantis.io"}]
description = "A tool for classifying metagenomic data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["machine-learning", "computational-biology"]
dependencies = [
"biopython",
# "pyfastx",
"joblib",
"numba",
"numpy>=1.17",
"skorch>=0.9.0",
"torch>=1.7.0",
"tqdm"
]

[project.scripts]
tiara = "tiara.main:main"
tiara-test = "tiara.test.test:test"

[project.urls]
"Homepage" = "https://github.com/jolespin/tiara-nal/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tiara", "tiara.src", "tiara.models", "tiara.test", "tiara.training"]
